fix_contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,7 +4,8 @@
     --secondary-color: #668F80; 
     --accent-color1: #A0AF84; 
     --accent-color2: #C3B59F; 
-}
+    --text-color: #000000;
+
 
 h1, h2 {
     font-family: 'sans-serif', 'Open Sans', cursive;
@@ -39,7 +40,7 @@ div.hero article {
     left: 100px;
     right: 100px;
     margin: 1rem auto;
-    background: var(--accent-color1);
+    background: var(black);
     padding: 1rem;
     border: 1px solid rgb(0, 0, 0 / .1);
     opacity: 80%;
@@ -108,7 +109,7 @@ header img {
 .navigation a {
     display: inline-block;
     background-color: var(--accent-color1);
-    color: var(--primary-color);
+    color: var(--text-color);
     padding: 10px 20px;
     text-decoration: none;
     font-size: 1.2rem;
@@ -118,7 +119,7 @@ header img {
 }
 
 .navigation a:hover {
-    color: var(--secondary-color);
+    color: var(--text-color);
     font-weight: 700;
     text-decoration: underline;
 }
@@ -150,7 +151,7 @@ header img {
     display: flex;
     text-align: justify;
     padding: 20px;
-    color: #333; 
+    color: white; 
 }
 
 .section2 {
@@ -178,14 +179,14 @@ footer {
     justify-items: center;
     background-color: var(--primary-color);
     padding: 20px;
-    color: var(--accent-color2);
+    color: var(black);
     text-align: center; 
 }
 
 footer p {
     margin: 0;
     font-family: sans-serif;
-    color: var(--accent-color2);
+    color: var(black);
     grid-column: 1 / -1; 
 }
 
